--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   breakpoint: ^1.2.0
+  custom_clippers: ^2.0.0
 
 dev_dependencies:
   flutter_test:
